<resources>
    <string name="app_name">SwiftLift</string>
    <string name="sign_in">Sign in</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text">email</string>
    <string name="sign_up_text">Sign up</string>
    <string name="password_text">password</string>
    <string name="name_text">Name</string>
    <string name="surname_text">Surname</string>
    <string name="confirm_email_text">Confirm email</string>
    <string name="phone_text">Phone</string>
    <string name="confirm_password_text">Confirm password</string>
    <string name="name_obligatory_text">Name*</string>
    <string name="surname_obligatory_text">Surname*</string>
    <string name="email_obligatory_text">Email*</string>
    <string name="password_obligatory_text">Password*</string>
    <string name="phone_obligatory_text">Phone*</string>
    <string name="name_error">Length of name must be greater than 2 and smaller than 30</string>
    <string name="surname_error">Length of surname must be greater than 2 and smaller than 30</string>
    <string name="password_error">Length of password must be greater than 6 and smaller than 30</string>
    <string name="confirm_password_error">Passwords must be the same!</string>
    <string name="email_error">Invalid email</string>
    <string name="confirm_email_error">Emails must be the same!</string>
    <string name="phone_error">Invalid phone</string>
    <string name="registration_successful">You were successfully registered! Now confirm your email address.</string>
    <string name="registration_failure_unknown_error">Error has occurred, try later or with different data</string>
    <string name="log_out_text">Log out</string>
    <string name="snackbar_ok">OK</string>
    <string name="bad_login_data">There is no user with such email and password</string>
    <string name="incomplete_register">We couldn\'t complete your registration. You are registered, but some data may be missing. You can complete it manually in your profile settings. Now you must verify your email address</string>
    <string name="network_error">Problem with internet occurred</string>
    <string name="menu_signed_user_add_lift_title">add lift</string>
    <string name="menu_signed_user_settings_title">settings</string>
    <string name="login_unknown_error">Unknown error occurred during logging in</string>
    <string name="unverified_email">You must verify your email first!</string>
    <string name="activity_signed_user_main_create_new_lift_text">&#160;Create new lift</string>
    <string name="sign_out_text">Sign out</string>
    <string name="new_password_text">new password</string>
    <string name="confirm_new_password_text">confirm new password</string>
    <string name="save_changes_text">Save changes</string>
    <string name="cancel_text">Cancel</string>
    <string name="reauthentication_error">Incorrect password</string>
    <string name="settings_change_succes">Changes saved!</string>
    <string name="unknown_error">Error occurred, try again later</string>
    <string name="password_authentication">Your password:</string>
    <string name="current_password_text">Current password</string>
    <string name="new_email_text">New email</string>
    <string name="confirm_text">Confirm</string>
    <string name="confirm_your_identity_text">Confirm your identity</string>
    <string name="successful_password_update">Your password was successfully updated</string>
    <string name="password_update_failure">Error occurred during password updating</string>
    <string name="credential_failure">Authentication failed</string>
    <string name="successful_update">Update success!</string>
    <string name="update_fail">Update failed!</string>
    <string name="load_data_failure">Couldn\'t load your data. Check internet connection and sign in again</string>
    <string name="edit_personal_data_text">edit personal data</string>
    <string name="change_password_text">change password</string>
    <string name="change_email_text">Change email</string>
    <string name="edit_in_progress_error">Your previous edit is still in progress. You must wait for it.</string>
    <string name="login_error_null_auth_or_user">Can\'t sign in. Try later.</string>
    <string name="cant_sign_out">Can\'t sign out</string>
    <string name="resend_text">resend</string>
    <string name="title_activity_lift_points_pick">Map</string>
    <string name="null_fragment_manager_error">"Error occurred. Try again."</string>
    <string name="add_stretch_text">&#160;add stretch</string>
    <string name="use_add_stretch_button_text">use \"+ add stretch\" button in the top left corner to add new stretches</string>
    <string name="from_text">From</string>
    <string name="to_text">To</string>
    <string name="color_text">:</string>
    <string name="datetime_text">DateTime</string>
    <string name="price_text">Price</string>
    <string name="earliest_departure_date_text">Earliest departure date</string>
    <string name="max_distance_from_starting_point_in_km_text">max distance from starting point in km</string>
    <string name="max_distance_from_end_point_in_km_text">max distance from end point in km</string>
    <string name="find_lift_tab_title">Find lift</string>
    <string name="driver_tab_title">Driver</string>
    <string name="passenger_tab_title">Passenger</string>
    <string name="you_haven_t_got_any_lifts_as_a_driver">You haven\'t got any lifts as a driver</string>
    <string name="add_new_lift">add new lift</string>
    <string name="add_text">Add</string>
    <string name="cant_translate_to_city">Can\'t translate coordinates to city, try to add location again</string>
    <string name="departure_date_text">Departure date</string>
    <string name="dd_mm_yyyy">dd/mm/yyyy</string>
    <string name="departure_time_text">Departure time</string>
    <string name="hh_mm">hh:mm</string>
    <string name="departure_place_text">Departure place</string>
    <string name="arrival_date_text">Arrival date</string>
    <string name="arrival_time_text">Arrival time</string>
    <string name="arrival_place_text">Arrival place</string>
    <string name="eur">EUR</string>
    <string name="empty_field_error">this field can\'t be empty</string>
    <string name="arr_date_must_be_after_dep_date">Arrival date must be after departure date</string>
    <string name="date_must_be_in_future">Date must be in future!</string>
    <string name="invalid_currency_error">Invalid currency</string>
    <string name="stretch_add_error">Error occurred during adding stretch. Try again.</string>
    <string name="save_text">Save</string>
    <string name="auth_error">Authentication error occurred. Try to login again</string>
    <string name="too_big_price_error">Price is too big!</string>
    <string name="internet_connection_error">Internet connection error!</string>
    <string name="currency_text">currency</string>
    <string name="i_e_eur_text">i.e. EUR</string>
    <string name="done_text">done</string>
    <string name="error_during_loading_lift">Error occurred during loading lift!</string>
    <string name="stretch_delete_failure">Error occurred during deleting stretch!</string>
    <string name="lifts_load_error">Error occurred during loading lifts. Check your internet connection and restart app</string>
    <string name="invalid_data">You\'ve provided wrong or incomplete data</string>
    <string name="geocoder_not_present">Geocoder is not present. Check your internet connection and open app again!</string>
    <string name="geocoding_exception">Error occurred. Check your internet connection and open app again!</string>
    <string name="cant_resolve_location">Can\'t resolve location. Check your internet connection and open app again!</string>
    <string name="from_street_city_country_etc">From (street, city, country, post code etc.)</string>
    <string name="to_street_city_country_post_code_etc">To (street, city, country, post code, etc.)</string>
    <string name="earliest_departure_time_text">Earliest departure time</string>
    <string name="_20">20</string>
    <string name="default_distance_range">20</string>
    <string name="unsupported_localization">Sorry, we don\'t support localizations close to 180th meridian or North Pole or South Pole. Try decreasing searching range</string>
    <string name="search_error">Some error occurred during searching</string>
    <string name="search_completed">Search completed. Number of results: </string>
    <string name="no_results">Sorry, there aren\'t any results for this search</string>
    <string name="km">Km</string>
    <string name="max_departure_distance">Max. distance [km]:</string>
    <string name="max_arrival_distance">Max. arrival distance [km]:</string>
    <string name="e_g_3">e.g. 3</string>
    <string name="amount_of_passengers">amount of passengers</string>
    <string name="default_num_of_passengers">3</string>
    <string name="too_small_num_of_passengers">Minimum number of passengers is</string>
    <string name="too_big_num_of_passengers">You jester! Maximium number of passengers is</string>
    <string name="lift_owner_photo">Lift owner photo</string>
    <string name="owner_name">Owner name</string>
    <string name="address">address</string>
    <string name="sample_date">21.07.2019 23:32</string>
    <string name="sample_address">sample address</string>
    <string name="sample_price">15.50 EUR</string>
    <string name="enroll">Enroll</string>
    <string name="contact">Contact</string>
    <string name="lift_req_send_error">Error occurred during sending request. Check your internet connection, restart app, and try again</string>
    <string name="cant_find_owner_name">Cannot find driver name</string>
    <string name="cant_find_owner_surname">Cannot find driver surname</string>
    <string name="cant_find_owner_data">Cannot find driver</string>
    <string name="choose_profile_photo">choose profile photo</string>
    <string name="photo_update_failure">Error occurred during updating photo</string>
    <string name="request_lift_email_subject">SwiftLift - I would like to go with you</string>
    <string name="email_updated_only_in_auth">Error occurred during updating your email. Your email for login has been updated, although other users still can contact with you via old email. try again</string>
    <string name="email_update_failure">Error occurred during updating your email. Check your internet connection and try again</string>
    <string name="edit_description">edit description</string>
    <string name="lift_description_hint">Some additional info, like additional contact, requirements, limitations etc.</string>
    <string name="too_long_description">Max. number of letters is</string>
    <string name="latest_departure_date">Latest departure date:</string>
    <string name="latest_departure_time">latest departure time:</string>
    <string name="you_must_be_signed_in">You must be signed in to perform this action!</string>
    <string name="welcome_to_swiftlift">Welcome to SwiftLift!</string>
    <string name="main_activity_welcome_text">With this app you can easily share car with others as a passenger or a driver. The best thing is that this app is totally FREE and it will never change! You can perform your first search for a ride by scrolling down or you can register and then use all the functionalities of this app. We hope you will enjoy SwiftLift!</string>
    <string name="destination_address">Destination address:</string>
    <string name="destination">Destination</string>
    <string name="earliest_departure_time">Earliest departure time:</string>
    <string name="earliest_departure_date">Earliest departure date:</string>
    <string name="bad_address">Provided address cannot be found!</string>
    <string name="reset_password">Reset password</string>
    <string name="sample_email">your@email.com</string>
    <string name="your_email">Your email:</string>
</resources>